--- a/index.html
+++ b/index.html
@@ -2,12 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
-
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css rel="stylesheet" type="text/css"">
+    <script src="js/jquery-1.12.4.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Calculator</title>
   </head>
   <body>
+    <div class="container">
     <h1>Calculator</h1>
-    <script src="js/scripts.js"></script>
+      <form id=add>
+        <div class="form-group">
+          <label for="imput1">1st number:</label>
+          <input id="imput1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="imput2">2nd number:</label>
+          <input id="imput2" class="form-control" type="text">
+        </div>
+        <button id="addbtn" type="submit" class="btn">Add!</button>
+        <button id="subtractbtn" type="submit" class="btn">subtract!</button>
+        <button id="multiplybtn" type="submit" class="btn">multiply!</button>
+        <button id="dividebtn" type="submit" class="btn">divide!</button>
+      </form>
+    </div>
+    <div id="output">
+
+    </div>
+
   </body>
 </html>
